# TeColor

./: CIELAB.cpp  CIELAB.h  CMakeLists.txt  ColorMatchingFunction.cpp  ColorMatchingFunction.h  EigenUtils.cpp  EigenUtils.h  Illuminant.cpp  Primaries.cpp  Primaries.h  README.md  ReflectanceSet.cpp  Spectra.cpp  Spectra.h  SpectraMatrix.h  SpectralKit.cpp  SpectralKit.h  Tristimulus.cpp  Tristimulus.h  builtin_database.h  main.cpp  typedefs.h
demo/: CMakeLists.txt  tecolor_demo.cpp
include/TeColor/: AppearanceKit.h  CIELAB.h  ColorMatchingFunction.h  ColorimetryKit.h  EigenUtils.h  Illuminant.h  Primaries.h  ReflectanceSet.h  Spectra.h  SpectraMatrix.h  SpectralKit.h  TeColor  Tristimulus.h  typedefs.h
src/tecolor/: AppearanceKit.cpp  CIELAB.cpp  CMakeLists.txt  ColorMatchingFunction.cpp  ColorimetryKit.cpp  EigenUtils.cpp  Illuminant.cpp  Primaries.cpp  ReflectanceSet.cpp  Spectra.cpp  SpectralKit.cpp  Tristimulus.cpp
